src/validation/tests/snapshots/rusty__validation__tests__pou_validation_tests__class_has_implementation.snap
---
source: src/validation/tests/pou_validation_tests.rs
expression: "&diagnostics"
---
error[E017]: A class cannot have an implementation
  ┌─ <internal>:6:13
  │
6 │             LIGHT := TRUE;
  │             ^^^^^^^^^^^^^^ A class cannot have an implementation
